[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "llm-security-testbench"
version = "0.1.0"
description = "Reproducible evaluation for prompt-injection detectors and LLM guardrails."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Enes Deniz", email = "enes@altaysec.com.tr" },
]
keywords = [
  "ai-security",
  "llm-security",
  "prompt-injection",
  "guardrails",
  "red-team",
  "blue-team",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/3nesdeniz/llm-security-testbench"
Documentation = "https://github.com/3nesdeniz/llm-security-testbench#readme"
Issues = "https://github.com/3nesdeniz/llm-security-testbench/issues"

[project.scripts]
llmst = "llm_security_testbench.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "twine>=6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_security_testbench"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["llm_security_testbench"]
omit = ["src/llm_security_testbench/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
